--- a/DJISimulatorDemo/app/src/main/res/layout/activity_main.xml
+++ b/DJISimulatorDemo/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/btn_reglage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_forward"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="177dp"
+        android:layout_marginEnd="48dp"
+        android:text="Réglages" />
+
     <RelativeLayout
         android:id="@+id/main_title_rl"
         android:layout_width="fill_parent"
