--- a/DJISimulatorDemo/app/src/main/res/layout-land/activity_reglages.xml
+++ b/DJISimulatorDemo/app/src/main/res/layout-land/activity_reglages.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ReglagesActivity">
 
+    <EditText
+        android:id="@+id/edittext_altitude"
+        android:layout_width="83dp"
+        android:layout_height="43dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="304dp"
+        android:ems="10"
+        android:hint="m"
+        android:inputType="numberDecimal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="134dp"
