--- a/DJISimulatorDemo/app/src/main/res/layout-land/activity_main.xml
+++ b/DJISimulatorDemo/app/src/main/res/layout-land/activity_main.xml
@@ -6,15 +6,15 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="247dp"
+        android:layout_width="660dp"
+        android:layout_height="197dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="false"
-        android:layout_marginStart="192dp"
-        android:layout_marginTop="240dp"
-        android:layout_marginEnd="193dp"
+        android:layout_marginStart="182dp"
+        android:layout_marginTop="242dp"
+        android:layout_marginEnd="182dp"
         android:layout_marginBottom="334dp"
         android:orientation="horizontal">
 
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:text="Activer commande drone" />
 
         <Button
@@ -31,12 +32,15 @@
             style="@style/common_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
             android:text="Décollage" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
             android:orientation="vertical">
+
 
             <Button
                 android:id="@+id/btn_forward"
@@ -66,7 +70,8 @@
             style="@style/common_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Atterrissage" />
+            android:text="Atterrissage"
+            android:layout_marginRight="5dp"/>
 
         <Button
             android:id="@+id/btn_disable_virtual_stick"
