--- a/DJISimulatorDemo/app/src/main/res/layout-land/activity_reglages.xml
+++ b/DJISimulatorDemo/app/src/main/res/layout-land/activity_reglages.xml
@@ -4,30 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ReglagesActivity">
 
-    <EditText
-        android:id="@+id/edittext_altitude"
-        android:layout_width="83dp"
-        android:layout_height="43dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="304dp"
-        android:ems="10"
-        android:hint="m"
-        android:inputType="numberDecimal"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="1019dp"
+        android:layout_height="749dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="660dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/background_reglages"
+            android:visibility="visible" />
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="134dp"
-        android:layout_height="158dp"
-        android:layout_marginStart="100dp"
+        android:layout_width="97dp"
+        android:layout_height="523dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="160dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.221">
+        app:layout_constraintTop_toTopOf="@+id/frameLayout">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Temps arrêt 1 :" />
 
         <EditText
             android:id="@+id/edittext_stop_1"
@@ -37,6 +49,13 @@
             android:hint="Tps stop 1 (s)"
             android:inputType="numberDecimal" />
 
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="140dp"
+            android:text="Temps arrêt 2 : " />
+
         <EditText
             android:id="@+id/edittext_stop_2"
             android:layout_width="match_parent"
@@ -44,6 +63,13 @@
             android:ems="10"
             android:hint="Tps stop 2 (s)"
             android:inputType="numberDecimal" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="150dp"
+            android:text="Temps arrêt 3 : " />
 
         <EditText
             android:id="@+id/edittext_stop_3"
@@ -55,52 +81,117 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="134dp"
-        android:layout_height="158dp"
-        android:layout_marginStart="12dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.221">
+        android:layout_width="407dp"
+        android:layout_height="202dp"
+        android:layout_marginTop="88dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/edittext_dist_roll_1"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="129dp"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Parcours 1 (m)"
-            android:inputType="numberDecimal" />
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/edittext_dist_roll_2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Parcours 2 (m)"
-            android:inputType="numberDecimal" />
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Parcours 1 :" />
 
-        <EditText
-            android:id="@+id/edittext_dist_roll_3"
-            android:layout_width="match_parent"
+            <EditText
+                android:id="@+id/edittext_dist_roll_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Parcours 1 (m)"
+                android:inputType="numberDecimal" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="129dp"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Parcours 3 (m)"
-            android:inputType="numberDecimal" />
+            android:layout_marginLeft="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Parcours 2 :" />
+
+            <EditText
+                android:id="@+id/edittext_dist_roll_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Parcours 2 (m)"
+                android:inputType="numberDecimal" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="129dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Parcours 3 :" />
+
+            <EditText
+                android:id="@+id/edittext_dist_roll_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Parcours 3 (m)"
+                android:inputType="numberDecimal" />
+        </LinearLayout>
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/edittext_vitesse_roll"
-        android:layout_width="83dp"
-        android:layout_height="43dp"
+    <LinearLayout
+        android:layout_width="88dp"
+        android:layout_height="241dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="212dp"
-        android:ems="10"
-        android:hint="m/s"
-        android:inputType="numberDecimal"
+        android:layout_marginBottom="160dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Altitude :" />
+
+        <EditText
+            android:id="@+id/edittext_altitude"
+            android:layout_width="83dp"
+            android:layout_height="43dp"
+            android:ems="10"
+            android:hint="m"
+            android:inputType="numberDecimal" />
+
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:text="Vitesse :" />
+
+        <EditText
+            android:id="@+id/edittext_vitesse_roll"
+            android:layout_width="83dp"
+            android:layout_height="43dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="212dp"
+            android:ems="10"
+            android:hint="m/s"
+            android:inputType="numberDecimal" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_ok"
@@ -115,35 +206,49 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="189dp"
-        android:layout_height="179dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="56dp"
+        android:layout_width="430dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="160dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="189dp"
+            android:layout_width="match_parent"
             android:layout_height="55dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="223dp">
 
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Vitesse 1 :" />
+
             <EditText
                 android:id="@+id/edittext_v_pitch_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Vitesse 1"
                 android:inputType="numberDecimal" />
 
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Distance 1 :" />
+
             <EditText
                 android:id="@+id/edittext_dist_pitch_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Distance 1"
@@ -151,25 +256,40 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="189dp"
+            android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_marginTop="150dp"
             android:orientation="horizontal"
             tools:layout_editor_absoluteX="61dp"
             tools:layout_editor_absoluteY="177dp">
 
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Vitesse 2 :" />
+
             <EditText
                 android:id="@+id/edittext_v_pitch_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Vitesse 2"
                 android:inputType="numberDecimal" />
 
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Distance 2 :" />
+
             <EditText
                 android:id="@+id/edittext_dist_pitch_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Distance 2"
@@ -177,25 +297,40 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="189dp"
+            android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_marginTop="160dp"
             android:orientation="horizontal"
             tools:layout_editor_absoluteX="48dp"
             tools:layout_editor_absoluteY="168dp">
 
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Vitesse 2 :" />
+
             <EditText
                 android:id="@+id/edittext_v_pitch_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Vistesse 3"
                 android:inputType="numberDecimal" />
 
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Distance 2 :" />
+
             <EditText
                 android:id="@+id/edittext_dist_pitch_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Distance 3 (m)"
